Merge branch 'apps-7361' into 'main'
APPS-7361 Move duplicate context menu actions to common

See merge request ggb/geogebra!10205

GitOrigin-RevId: 8eb40aee8d5381a343f6b8255037ea5051a2489c